samples/_failures_safe/1761668958_9f6b6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df6e05e8.c: In function ‘main’:
./samples/SAFE/__tmp_df6e05e8.c:184:9: error: expected declaration or statement at end of input
  184 |         printf("Enter event number: ");
      |         ^~~~~~
./samples/SAFE/__tmp_df6e05e8.c:184:9: error: expected declaration or statement at end of input
